Fixed some issues with account.users.*

--- a/src/main/webapp/app/components/account/groups/GroupsManageView.html
+++ b/src/main/webapp/app/components/account/groups/GroupsManageView.html
@@ -36,7 +36,7 @@
             <div class="return"></div>
             <br>
             <div class="form-actions">
-                <button ng-click="updateGroup()" type="submit" class="btn btn-success col-span-12" translate="tatami.form.save"></button>
+                <button ng-click="updateGroup()" type="submit" class="btn btn-info col-span-12" translate="tatami.form.save"></button>
             </div>
         </fieldset>
     </form>
