--- a/src/main/webapp/app/components/account/tags/TagsView.html
+++ b/src/main/webapp/app/components/account/tags/TagsView.html
@@ -1,4 +1,5 @@
 <div>
+    <h2 translate="tatami.account.tags.title"></h2>
     <div class="tabMenu">
         <ul class="nav nav-tabs">
             <li ng-class="{ 'active': $state.current.name === 'account.tags.list' }">
