--- a/src/main/webapp/app/components/account/groups/GroupsView.html
+++ b/src/main/webapp/app/components/account/groups/GroupsView.html
@@ -92,17 +92,18 @@
                                        {{ group.counter }}
                                     </td>
                                     <td>
-                                        <a ng-if="group.administrator" class="btn-title pull-right label labelSizeNormal label-info hidden-phone" ui-sref="account.groups.manage({ groupId: group.groupId })">
-                                            <span class="glyphicon glyphicon-th-large">
-                                                <span translate="tatami.home.group.manage"></span>
-                                            </span>
-                                        </a>
+                                        <span ng-if="group.administrator">
+                                            <button ui-sref="account.groups.manage({ groupId: group.groupId })" class="pull-right btn btn-primary hidden-phone" type="button">
+                                                <span class="glyphicon glyphicon-th-large"></span>
+                                                <span translate="tatami.account.groups.manage"></span>
+                                            </button>
+                                        </span>
 
                                         <a ng-if="!group.administrator" ng-click="joinLeaveGroup(group)" ng-init="hover = false" ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="btn-title pull-right label labelSizeNormal" ng-class="{ 'label-danger': group.member && hover, 'label-info': group.member && !hover }">
                                             <span class="glyphicon" ng-class="group.member ? 'glyphicon-minus' : 'glyphicon-plus'">
-                                                <span ng-if="!group.member" class="hidden-phone" translate="tatami.home.group.join"></span>
-                                                <span ng-if="group.member && !hover" class="hidden-phone" translate="tatami.home.group.joined"></span>
-                                                <span ng-if="group.member && hover" class="hidden-phone" translate="tatami.home.group.leave"></span>
+                                                <span ng-if="!group.member" class="hidden-phone" translate="tatami.account.groups.join"></span>
+                                                <span ng-if="group.member && !hover" class="hidden-phone" translate="tatami.account.groups.joined"></span>
+                                                <span ng-if="group.member && hover" class="hidden-phone" translate="tatami.account.groups.leave"></span>
                                             </span>
                                         </a>
                                     </td>
