--- a/src/main/webapp/app/components/account/groups/GroupsView.html
+++ b/src/main/webapp/app/components/account/groups/GroupsView.html
@@ -3,7 +3,7 @@
             <form class="form-horizontal row-fluid">
                 <h2 translate="tatami.account.groups.title"></h2>
 
-                <button class="show btn btn-xlarge btn-block btn-primary" type="button" translate="tatami.account.groups.create" ng-click="newGroup()"></button>
+                <button class="show btn btn-xlarge btn-block btn-primary" type="button" translate="tatami.account.groups.createNewGroup" ng-click="newGroup()"></button>
 
                 <fieldset class="hide" style="display: block;" ng-show="current.createGroup">
                     <legend translate="tatami.account.groups.create"></legend>
@@ -42,8 +42,8 @@
                     <div class="return"></div>
                     <br>
                     <div class="form-actions">
-                        <button type="submit" class="btn btn-success col-span-7 little-marge-right" translate="tatami.form.save" ng-click="createNewGroup()"></button>
-                        <button type="reset" class="btn btn-danger col-span-4" translate="tatami.form.cancel" ng-click="cancelGroupCreate()"></button>
+                        <button type="submit" class="btn btn-primary col-span-7 little-marge-right" translate="tatami.account.groups.create" ng-click="createNewGroup()"></button>
+                        <button type="reset" class="btn btn-default col-span-4" translate="tatami.form.cancel" ng-click="cancelGroupCreate()"></button>
                     </div>
                 </fieldset>
 
