my friends -> following

--- a/src/main/webapp/app/components/account/users/UsersView.html
+++ b/src/main/webapp/app/components/account/users/UsersView.html
@@ -2,8 +2,8 @@
     <h2 translate="tatami.account.users.title"></h2>
     <div class="tabMenu">
         <ul class="nav nav-tabs">
-            <li ng-class="{ 'active': $state.current.name === 'account.users.list' }">
-                <a ui-sref="account.users.list" translate="tatami.account.users.myFriends"></a>
+            <li ng-class="{ 'active': $state.current.name === 'account.users.following' }">
+                <a ui-sref="account.users.following" translate="tatami.account.users.following"></a>
             </li>
             <li ng-class="{ 'active': $state.current.name === 'account.users.recommended' }">
                 <a ui-sref="account.users.recommended" translate="tatami.account.users.recommend"></a>
