changed recommended key in translateconfig

--- a/src/main/webapp/app/components/account/users/UsersView.html
+++ b/src/main/webapp/app/components/account/users/UsersView.html
@@ -6,7 +6,7 @@
                 <a ui-sref="account.users.following" translate="tatami.account.users.following"></a>
             </li>
             <li ng-class="{ 'active': $state.current.name === 'account.users.recommended' }">
-                <a ui-sref="account.users.recommended" translate="tatami.account.users.recommend"></a>
+                <a ui-sref="account.users.recommended" translate="tatami.account.users.recommended"></a>
             </li>
             <li ng-class="{ 'active': $state.current.name === 'account.users.search' }">
                 <a ui-sref="account.users.search" translate="tatami.account.users.search"></a>
