my tags -> following

--- a/src/main/webapp/app/components/account/tags/TagsView.html
+++ b/src/main/webapp/app/components/account/tags/TagsView.html
@@ -2,8 +2,8 @@
     <h2 translate="tatami.account.tags.title"></h2>
     <div class="tabMenu">
         <ul class="nav nav-tabs">
-            <li ng-class="{ 'active': $state.current.name === 'account.tags.list' }">
-                <a ui-sref="account.tags.list" translate="tatami.account.tags.myTags"></a>
+            <li ng-class="{ 'active': $state.current.name === 'account.tags.following' }">
+                <a ui-sref="account.tags.following" translate="tatami.account.tags.following"></a>
             </li>
             <li ng-class="{ 'active': $state.current.name === 'account.tags.recommended' }">
                 <a ui-sref="account.tags.recommended" translate="tatami.account.tags.trends"></a>
