changed some state urls

--- a/src/main/webapp/app/components/account/tags/TagsView.html
+++ b/src/main/webapp/app/components/account/tags/TagsView.html
@@ -5,8 +5,8 @@
             <li ng-class="{ 'active': $state.current.name === 'account.tags.following' }">
                 <a ui-sref="account.tags.following" translate="tatami.account.tags.following"></a>
             </li>
-            <li ng-class="{ 'active': $state.current.name === 'account.tags.recommended' }">
-                <a ui-sref="account.tags.recommended" translate="tatami.account.tags.trends"></a>
+            <li ng-class="{ 'active': $state.current.name === 'account.tags.trends' }">
+                <a ui-sref="account.tags.trends" translate="tatami.account.tags.trends"></a>
             </li>
             <li ng-class="{ 'active': $state.current.name === 'account.tags.search' }">
                 <a ui-sref="account.tags.search" translate="tatami.account.tags.search"></a>
