made copyright end year dynamic on license page

--- a/src/main/webapp/app/components/about/license/LicenseView.html
+++ b/src/main/webapp/app/components/about/license/LicenseView.html
@@ -1,7 +1,7 @@
 <div class="col-offset-2 col-span-8">
     <h1 translate="tatami.about.license.title"></h1>
     <p>
-        <span translate="tatami.about.license.copyright"></span>
+        <span translate="tatami.about.license.copyright"></span> &copy; 2012-{{ endYear }}
         <a href="http://www.ippon.fr">Ippon Technologies</a>
     </p>
     <p>Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at</p>
