--- a/src/main/webapp/app/components/home/group/GroupHeaderView.html
+++ b/src/main/webapp/app/components/home/group/GroupHeaderView.html
@@ -27,20 +27,20 @@
                 </span>
 
                 <span ng-if="group.administrator">
-                    <button ui-sref="account.groups.manage({ groupId: group.groupId })" class="pull-right btn btn-primary hidden-phone" type="button">
+                    <button ui-sref="account.groups.manage({ groupId: group.groupId })" class="pull-right btn btn-sm btn-primary hidden-phone" type="button">
                         <span class="glyphicon glyphicon-th-large"></span>
                         <span translate="tatami.home.group.manage"></span>
                     </button>
                 </span>
 
                 <span ng-if="!group.administrator">
-                    <a ng-click="joinLeaveGroup()" ng-init="hover = false" ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="btn-title pull-right label" ng-class="{ 'label-danger': group.member && hover, 'label-info': group.member && !hover }">
+                    <button type="button" ng-click="joinLeaveGroup()" ng-init="hover = false" ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="btn btn-sm pull-right" ng-class="{ 'btn-danger': group.member && hover, 'btn-info': group.member && !hover }">
                         <span class="glyphicon" ng-class="group.member ? 'glyphicon-minus' : 'glyphicon-plus'">
                             <span ng-if="!group.member" class="hidden-phone" translate="tatami.home.group.join"></span>
                             <span ng-if="group.member && !hover" class="hidden-phone" translate="tatami.home.group.joined"></span>
                             <span ng-if="group.member && hover" class="hidden-phone" translate="tatami.home.group.leave"></span>
                         </span>
-                    </a>
+                    </button>
                 </span>
             </h3>
         </div>
