changed glyphicon <i> tags to <span>

--- a/src/main/webapp/app/components/account/AccountView.html
+++ b/src/main/webapp/app/components/account/AccountView.html
@@ -69,7 +69,8 @@
                                 </li>
                                 <li ui-sref-active="active">
                                     <a ui-sref="account.sotd">
-                                    <i class="glyphicon glyphicon-signal"></i> {{ 'tatami.account.sotd.title' | translate }}
+                                        <span class="glyphicon glyphicon-signal"></span>
+                                        <span translate="tatami.account.sotd.title"></span>
                                     </a>
                                 </li>
                             </ul>
