--- a/src/main/webapp/app/components/account/groups/GroupsManageView.html
+++ b/src/main/webapp/app/components/account/groups/GroupsManageView.html
@@ -29,8 +29,8 @@
                 </div>
             </div>
             <div class="alert alertColor">
-                <i class="glyphicon glyphicon-warning-sign"></i>
-                {{ 'tatami.account.groups.archiveWarning' | translate }}
+                <span class="glyphicon glyphicon-warning-sign"></span>
+                <span translate="tatami.account.groups.archiveWarning"></span>
             </div>
             <br>
             <div class="return"></div>
