--- a/src/main/webapp/app/components/home/timeline/TimelineHeaderView.html
+++ b/src/main/webapp/app/components/home/timeline/TimelineHeaderView.html
@@ -2,20 +2,20 @@
     <ul class="homebody-nav nav nav-justified">
         <li ui-sref-active="active">
             <a ui-sref="home.home.timeline">
-            <i class="glyphicon glyphicon-th-list"></i>
-            <span translate="tatami.home.timeline"></span>
+                <span class="glyphicon glyphicon-th-list"></span>
+                <span translate="tatami.home.timeline"></span>
             </a>
         </li>
         <li ui-sref-active="active">
             <a ui-sref="home.home.mentions">
-            <i class="glyphicon glyphicon-comment"></i>
-            <span translate="tatami.home.mentions"></span>
+                <span class="glyphicon glyphicon-comment"></span>
+                <span translate="tatami.home.mentions"></span>
             </a>
         </li>
         <li ui-sref-active="active">
             <a ui-sref="home.home.favorites">
-            <i class="glyphicon glyphicon-star"></i>
-            <span translate="tatami.home.favorites"></span>
+                <span class="glyphicon glyphicon-star"></span>
+                <span translate="tatami.home.favorites"></span>
             </a>
         </li>
     </ul>
