--- a/src/main/webapp/app/components/account/profile/ProfileView.html
+++ b/src/main/webapp/app/components/account/profile/ProfileView.html
@@ -7,7 +7,7 @@
                     <div class="control-group dashed">
                         <label class="control-label"></label>
                         <div class="controls">
-                            <div class="dropzone well" ng-file-drop ng-model="current.avatar">
+                            <div class="dropzone well" ng-file-select ng-file-drop ng-model="current.avatar">
                                 <p class="little-padding-top" translate="tatami.account.profile.dropPhoto"></p>
                                 <!--
                                 <input id="avatarFile" type="file" name="uploadFile" data-url="/tatami/rest/fileupload/avatar">
