--- a/src/main/webapp/app/components/admin/AdminView.html
+++ b/src/main/webapp/app/components/admin/AdminView.html
@@ -1,5 +1,6 @@
 <ng-include src="'/app/shared/topMenu/TopMenuView.html'"></ng-include>
 <div id="mainPanel" class="container">
+    <div ng-show="showReindexMessage" class="alert alert-success" translate="tatami.admin.success"></div>
     <div class="row">
         <div class="col-span-12">
             <h1 translate="tatami.admin.title"></h1>
@@ -19,28 +20,16 @@
                         </tr>
                         </thead>
                         <tbody>
-
-                        <tr>
-                            <td>
-                                mymail.vcu.edu
-                            </td>
-                            <td>
-                                1
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>
-                                yahoo.com
-                            </td>
-                            <td>
-                                5
-                            </td>
-                        </tr>
-
+                            <tr ng-repeat="domain in adminData.domains">
+                                <td>
+                                    {{ domain.name }}
+                                </td>
+                                <td>
+                                    {{ domain.numberOfUsers }}
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
-
                 </div>
             </div>
         </div>
@@ -53,124 +42,22 @@
                     <h2 translate="tatami.admin.environment"></h2>
                     <table class="table table-striped">
                         <thead>
-                        <tr>
-                            <th translate="tatami.admin.property"></th>
-                            <th translate="tatami.admin.value"></th>
-                        </tr>
+                            <tr>
+                                <th translate="tatami.admin.property"></th>
+                                <th translate="tatami.admin.value"></th>
+                            </tr>
                         </thead>
                         <tbody>
-
-                        <tr>
-                            <td>
-                                tatami.version
-                            </td>
-                            <td>
-                                3.1.1
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>
-                                tatami.wro4j.enabled
-                            </td>
-                            <td>
-                                false
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>
-                                tatami.google.analytics.key
-                            </td>
-                            <td>
-
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>
-                                tatami.message.reloading.enabled
-                            </td>
-                            <td>
-                                true
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>
-                                smtp.host
-                            </td>
-                            <td>
-
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>
-                                cassandra.host
-                            </td>
-                            <td>
-                                127.0.0.1:9160
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>
-                                search.engine
-                            </td>
-                            <td>
-
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>
-                                lucene.path
-                            </td>
-                            <td>
-
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>
-                                elasticsearch.indexNamePrefix
-                            </td>
-                            <td>
-                                tatami
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>
-                                elasticsearch.cluster.name
-                            </td>
-                            <td>
-                                tatamiCluster
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>
-                                elasticsearch.cluster.nodes
-                            </td>
-                            <td>
-                                127.0.0.1:9300
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>
-                                elasticsearch.cluster.default.communication.port
-                            </td>
-                            <td>
-                                9300
-                            </td>
-                        </tr>
-
+                            <tr ng-repeat="(key, value) in adminData.properties">
+                                <td>
+                                    {{ key }}
+                                </td>
+                                <td>
+                                    {{ value }}
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
-
                 </div>
             </div>
         </div>
@@ -180,7 +67,7 @@
         <div class="col-span-12">
             <h2 translate="tatami.admin.reindex"></h2>
 
-            <form class="form-horizontal" action="/tatami/admin/reindex" method="post">
+            <form class="form-horizontal">
                 <fieldset>
                     <div class="form-actions">
                         <button type="submit" class="input-xlarge btn btn-danger" ng-click="reindex()" translate="tatami.admin.reindex"></button>
