--- a/src/main/webapp/app/components/account/AccountView.html
+++ b/src/main/webapp/app/components/account/AccountView.html
@@ -26,49 +26,49 @@
                         <div class="tabbable alert alert-status">
                             <ul class="adminMenu nav nav-pills nav-stacked nomargin">
                                 <li ui-sref-active="active">
-                                    <a ui-sref="account.profile">
+                                    <a ui-sref="tatami.account.profile">
                                         <span class="glyphicon glyphicon-user"></span>
                                         <span translate="tatami.account.profile.title"></span>
                                     </a>
                                 </li>
                                 <li ui-sref-active="active">
-                                    <a ui-sref="account.preferences">
+                                    <a ui-sref="tatami.account.preferences">
                                         <span class="glyphicon glyphicon-cog"></span>
                                         <span translate="tatami.account.preferences.title"></span>
                                     </a>
                                 </li>
                                 <li ui-sref-active="active">
-                                    <a ui-sref="account.password">
+                                    <a ui-sref="tatami.account.password">
                                         <span class="glyphicon glyphicon-lock"></span>
                                         <span translate="tatami.account.password.title"></span>
                                     </a>
                                 </li>
                                 <li ui-sref-active="active">
-                                    <a ui-sref="account.files">
+                                    <a ui-sref="tatami.account.files">
                                         <span class="glyphicon glyphicon-file"></span>
                                         <span translate="tatami.account.files.title"></span>
                                     </a>
                                 </li>
-                                <li ng-class="{ 'active': $state.current.name.indexOf('account.users') != -1 }">
-                                    <a ui-sref="account.users">
+                                <li ng-class="{ 'active': $state.current.name.indexOf('tatami.account.users') != -1 }">
+                                    <a ui-sref="tatami.account.users">
                                         <span class="glyphicon glyphicon-globe"></span>
                                         <span translate="tatami.account.users.title"></span>
                                     </a>
                                 </li>
-                                <li ng-class="{ 'active': $state.current.name.indexOf('account.groups') != -1 }">
-                                    <a ui-sref="account.groups">
+                                <li ng-class="{ 'active': $state.current.name.indexOf('tatami.account.groups') != -1 }">
+                                    <a ui-sref="tatami.account.groups">
                                         <span class="glyphicon glyphicon-th-large"></span>
                                         <span translate="tatami.account.groups.title"></span>
                                     </a>
                                 </li>
-                                <li ng-class="{ 'active': $state.current.name.indexOf('account.tags') != -1 }">
-                                    <a ui-sref="account.tags">
+                                <li ng-class="{ 'active': $state.current.name.indexOf('tatami.account.tags') != -1 }">
+                                    <a ui-sref="tatami.account.tags">
                                         <span class="glyphicon glyphicon-tags"></span>
                                         <span translate="tatami.account.tags.title"></span>
                                     </a>
                                 </li>
                                 <li ui-sref-active="active">
-                                    <a ui-sref="account.sotd">
+                                    <a ui-sref="tatami.account.sotd">
                                         <span class="glyphicon glyphicon-signal"></span>
                                         <span translate="tatami.account.sotd.title"></span>
                                     </a>
