--- a/src/main/webapp/app/components/account/users/UsersView.html
+++ b/src/main/webapp/app/components/account/users/UsersView.html
@@ -2,20 +2,20 @@
     <h2 translate="tatami.account.users.title"></h2>
     <div class="tabMenu">
         <ul class="nav nav-tabs">
-            <li ng-class="{ 'active': $state.current.name === 'account.users.following' }">
-                <a ui-sref="account.users.following" translate="tatami.account.users.following"></a>
+            <li ng-class="{ 'active': $state.current.name === 'tatami.account.users.following' }">
+                <a ui-sref="tatami.account.users.following" translate="tatami.account.users.following"></a>
             </li>
-            <li ng-class="{ 'active': $state.current.name === 'account.users.recommended' }">
-                <a ui-sref="account.users.recommended" translate="tatami.account.users.recommended"></a>
+            <li ng-class="{ 'active': $state.current.name === 'tatami.account.users.recommended' }">
+                <a ui-sref="tatami.account.users.recommended" translate="tatami.account.users.recommended"></a>
             </li>
-            <li ng-class="{ 'active': $state.current.name === 'account.users.search' }">
-                <a ui-sref="account.users.search" translate="tatami.account.users.search"></a>
+            <li ng-class="{ 'active': $state.current.name === 'tatami.account.users.search' }">
+                <a ui-sref="tatami.account.users.search" translate="tatami.account.users.search"></a>
             </li>
         </ul>
     </div>
     <div>
         <form class="row-fluid littleMargeBot">
-            <input ng-show="$state.current.name === 'account.users.search'" ng-model="current.searchString" ng-trim="false" ng-change="search()" id="block_filter" type="text" class="search-query col-span-12" name="result_filter" autocomplete="off" placeholder="{{ 'tatami.account.users.search' | translate }}">
+            <input ng-show="$state.current.name === 'tatami.account.users.search'" ng-model="current.searchString" ng-trim="false" ng-change="search()" id="block_filter" type="text" class="search-query col-span-12" name="result_filter" autocomplete="off" placeholder="{{ 'tatami.account.users.search' | translate }}">
         </form>
         <div class="useritem" ng-repeat="user in usersList">
             <div class="pull-left background-image-fffix">
