--- a/src/main/webapp/app/components/account/sotd/DailyStatusView.html
+++ b/src/main/webapp/app/components/account/sotd/DailyStatusView.html
@@ -18,24 +18,24 @@
                         <td style="text-align: left">
                             <div class="pull-left background-image-fffix little-marge-right">
                                 <!-- Causes MIME type issue -->
-                                <img class="img-rounded img-medium" ng-style="{ 'background-image': 'url(' + user[0].avatarURL + ')' }">
+                                <img class="img-rounded img-medium" ng-style="{ 'background-image': 'url(' + user.info.avatarURL + ')' }">
                             </div>
                             <h4>
-                                <a ui-sref="home.profile.statuses({ username: user[0].username })">
+                                <a ui-sref="home.profile.statuses({ username: user.info.username })">
                                     <strong>
-                                        {{ user[0].firstName + ' ' + user[0].lastName }}
+                                        {{ user.info.firstName + ' ' + user.info.lastName }}
                                     </strong>
                                 </a>
                                 <br>
-                                <a ui-sref="home.profile.statuses({ username: user[0].username })">
+                                <a ui-sref="home.profile.statuses({ username: user.info.username })">
                                     <small>
-                                        @{{ user[0].username }}
+                                        @{{ user.info.username }}
                                     </small>
                                 </a>
                             </h4>
                         </td>
                         <td>
-                            {{ user[1] }}
+                            {{ user.dailyCount }}
                         </td>
                     </tr>
                     </tbody>
