--- a/src/main/webapp/app/components/home/timeline/TimelineHeaderView.html
+++ b/src/main/webapp/app/components/home/timeline/TimelineHeaderView.html
@@ -1,19 +1,19 @@
 <div>
     <ul class="homebody-nav nav nav-justified">
         <li ui-sref-active="active">
-            <a ui-sref="home.home.timeline">
+            <a ui-sref="tatami.home.home.timeline">
                 <span class="glyphicon glyphicon-th-list"></span>
                 <span translate="tatami.home.timeline"></span>
             </a>
         </li>
         <li ui-sref-active="active">
-            <a ui-sref="home.home.mentions">
+            <a ui-sref="tatami.home.home.mentions">
                 <span class="glyphicon glyphicon-comment"></span>
                 <span translate="tatami.home.mentions"></span>
             </a>
         </li>
         <li ui-sref-active="active">
-            <a ui-sref="home.home.favorites">
+            <a ui-sref="tatami.home.home.favorites">
                 <span class="glyphicon glyphicon-star"></span>
                 <span translate="tatami.home.favorites"></span>
             </a>
@@ -22,10 +22,10 @@
     <section class="tatams-content tatams-margin">
         <div class="tatams-content-title">
             <h3>
-                <strong ng-if="$state.current.name == 'home.home.timeline'" translate="tatami.home.timeline"></strong>
-                <strong ng-if="$state.current.name == 'home.home.mentions'" translate="tatami.home.mentions"></strong>
-                <strong ng-if="$state.current.name == 'home.home.favorites'" translate="tatami.home.favorites"></strong>
-                <strong ng-if="$state.current.name == 'home.home.company'" translate="tatami.home.companyTimeline"></strong>
+                <strong ng-if="$state.current.name == 'tatami.home.home.timeline'" translate="tatami.home.timeline"></strong>
+                <strong ng-if="$state.current.name == 'tatami.home.home.mentions'" translate="tatami.home.mentions"></strong>
+                <strong ng-if="$state.current.name == 'tatami.home.home.favorites'" translate="tatami.home.favorites"></strong>
+                <strong ng-if="$state.current.name == 'tatami.home.home.company'" translate="tatami.home.companyTimeline"></strong>
             </h3>
         </div>
     </section>
