--- a/src/main/webapp/app/components/home/HomeView.html
+++ b/src/main/webapp/app/components/home/HomeView.html
@@ -1,8 +1,10 @@
-<ng-include src="'/app/shared/topMenu/TopMenuView.html'"></ng-include>
-<div ng-init="showSearchAccountPost = true" class="row">
-    <aside ui-view="homeSide" id="tatamiSide" class="col-span-3"></aside>
-    <section ui-view="homeBody" id="tatamiBody" class="col-span-6">
-        <div ui-view="homeBodyHeader"></div>
-        <div ui-view="homeBodyContent"></div>
-    </section>
+<div>
+    <ng-include src="'/app/shared/topMenu/TopMenuView.html'"></ng-include>
+    <div ng-init="showSearchAccountPost = true" class="row">
+        <aside ui-view="homeSide" id="tatamiSide" class="col-span-3"></aside>
+        <section ui-view="homeBody" id="tatamiBody" class="col-span-6">
+            <div ui-view="homeBodyHeader"></div>
+            <div ui-view="homeBodyContent"></div>
+        </section>
+    </div>
 </div>
