--- a/src/main/webapp/app/components/home/profile/ProfileHeaderView.html
+++ b/src/main/webapp/app/components/home/profile/ProfileHeaderView.html
@@ -1,19 +1,19 @@
 <div>
     <ul class="homebody-nav nav nav-justified">
         <li ui-sref-active="active">
-            <a ui-sref="home.profile.statuses">
+            <a ui-sref="tatami.home.profile.statuses">
             <i class="glyphicon glyphicon-th-list"></i>
             <span translate="tatami.home.profile.statuses"></span>
             </a>
         </li>
         <li ui-sref-active="active">
-            <a ui-sref="home.profile.following">
+            <a ui-sref="tatami.home.profile.following">
             <i class="glyphicon glyphicon-user"></i>
             <span translate="tatami.home.profile.following"></span>
             </a>
         </li>
         <li ui-sref-active="active">
-            <a ui-sref="home.profile.followers">
+            <a ui-sref="tatami.home.profile.followers">
             <i class="glyphicon glyphicon-user"></i>
             <span translate="tatami.home.profile.followers"></span>
             </a>
@@ -22,7 +22,7 @@
     <section class="tatams-content tatams-margin">
         <div class="tatams-content-title">
             <h3>
-                <span ng-if="$state.current.name == 'home.profile.statuses'">
+                <span ng-if="$state.current.name == 'tatami.home.profile.statuses'">
                     <span ng-if="user.you">
                         <strong ng-if="user.statusCount == 1" translate="tatami.home.profile.youStatusesSingular"></strong>
                         <strong ng-if="user.statusCount <= 0 || user.statusCount > 1" translate="tatami.home.profile.youStatusesPlural" translate-values="{ amount: user.statusCount }"></strong>
@@ -36,7 +36,7 @@
                     </span>
                 </span>
 
-                <span ng-if="$state.current.name == 'home.profile.following'">
+                <span ng-if="$state.current.name == 'tatami.home.profile.following'">
                     <span ng-if="user.you">
                         <strong ng-if="user.friendsCount == 1" translate="tatami.home.profile.youFollowingSingular"></strong>
                         <strong ng-if="user.friendsCount <= 0 || user.friendsCount > 1" translate="tatami.home.profile.youFollowingPlural" translate-values="{ amount: user.friendsCount }"></strong>
@@ -50,7 +50,7 @@
                     </span>
                 </span>
 
-                <span ng-if="$state.current.name == 'home.profile.followers'">
+                <span ng-if="$state.current.name == 'tatami.home.profile.followers'">
                     <span ng-if="user.you">
                         <strong ng-if="user.followersCount == 1" translate="tatami.home.profile.youFollowersSingular"></strong>
                         <strong ng-if="user.followersCount <= 0 || user.followersCount > 1" translate="tatami.home.profile.youFollowersPlural" translate-values="{ amount: user.followersCount }"></strong>
