--- a/src/main/webapp/app/components/home/tag/TagHeaderView.html
+++ b/src/main/webapp/app/components/home/tag/TagHeaderView.html
@@ -1,7 +1,7 @@
 <div>
     <ul class="homebody-nav nav nav-justified">
         <li ui-sref-active="active">
-            <a ui-sref="home.home.tag">
+            <a ui-sref="tatami.home.home.tag">
             <i class="glyphicon glyphicon-tag"></i>
             <span translate="tatami.home.tag.title"></span>
             </a>
@@ -10,7 +10,7 @@
     <section class="tatams-content tatams-margin">
         <div class="tatams-content-title">
             <h3>
-                <strong ng-if="$state.current.name == 'home.home.tag'">#{{ tag.name }}</strong>
+                <strong ng-if="$state.current.name == 'tatami.home.home.tag'">#{{ tag.name }}</strong>
                 <button type="button" ng-click="followUnfollowTag()" ng-init="hover = false" ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="btn btn-sm toggleTag pull-right" ng-class="{ 'btn-danger': tag.followed && hover, 'btn-info': tag.followed && !hover }">
                     <span class="glyphicon" ng-class="tag.followed ? 'glyphicon-minus' : 'glyphicon-plus'">
                         <span ng-if="!tag.followed" class="hidden-phone" translate="tatami.home.tag.follow"></span>
